<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:text="@string/main_sub_heading"
            android:textAlignment="textStart"
            android:textColor="@color/grey_mid_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <ImageView
            android:id="@+id/imageViewBanner"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/home_screen_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeading" />

        <Button
            android:id="@+id/buttonContinue"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_email"
            android:padding="8dp"
            android:visibility="visible"
            android:text="@string/continue_with_email"
            app:layout_constraintBottom_toTopOf="@+id/tvPrivacy"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBanner"
            app:layout_constraintStart_toStartOf="@+id/imageViewBanner"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBanner"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/privacy"
            android:textAlignment="center"
            android:textColor="@color/grey_mid_2"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>